--- a/assets/products.scss
+++ b/assets/products.scss
@@ -15,7 +15,7 @@ $telos-color: #4526C3;
 
   @media (max-width: 768px) {
     flex-direction: column;
-    height: calc(100vh - 92px);
+    min-height: calc(200vh - 92px);
   }
 
   .product-teasers {
@@ -39,14 +39,14 @@ $telos-color: #4526C3;
     }
 
     @media (max-width: 768px) {
-      flex-direction: row;
+      flex-direction: column;
       width: 100%;
-      height: 50%;
+      height: calc(100vh - 92px);
     }
 
     .product-teaser {
       width: 100%;
-      height: 50%;
+      height: 100%;
       overflow: hidden;
 
       @media (max-width: 768px) {
@@ -155,7 +155,7 @@ $telos-color: #4526C3;
 
     @media (max-width: 768px) {
       width: 100%;
-      height: 50%;
+      height: initial;
     }
 
     .product-intro-brand {
@@ -165,6 +165,11 @@ $telos-color: #4526C3;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+
+      @media (max-width: 768px) {
+        width: 100%;
+        height: calc(100vh - 92px);
+      }
 
       &.scatter {
         background-color: $scatter-color;
