--- a/assets/main.scss
+++ b/assets/main.scss
@@ -192,10 +192,20 @@ li {
 
 }
 
+.code-type {
+  margin: $spacing-md 0 0;
+  background: lighten($black-dark, 2.5%);
+  padding: 0.5rem;
+  text-align: right;
+  width: 100%;
+  font-size: $font-size-xs;
+  color: lighten($black-dark, 25%);
+}
+
 .code {
   padding: 0.5rem;
   border-radius: $br-lg;
-  margin: $spacing-md 0;
+  margin: 0 0 $spacing-md;
   overflow-x: auto;
   background: $black-dark;
   position: relative;
