--- a/assets/main.scss
+++ b/assets/main.scss
@@ -88,12 +88,8 @@ button,
 
 a {
   color:$blue;
-  transition: color, border-bottom 0.28s ease-in-out;
+  transition: color 0.28s ease-in-out;
 }
-
-    .dark a {
-      color:$blue-light;
-    }
 
 h1 { 
   font-size: $font-size-mega;
@@ -240,10 +236,13 @@ li {
 
 .code {
   padding: 0.5rem;
-  border-radius: $br-lg;
+  border-radius: .4rem;
   margin: 0 0 $spacing-md;
   overflow-x: auto;
-  background: $black-dark;
+  background: lighten($black, 15%);
+  font-family: monospace;
+  font-size: $font-size-sm;
+  font-weight: 600;
   position: relative;
   width: 100%;
 
