--- a/assets/animation.scss
+++ b/assets/animation.scss
@@ -23,6 +23,15 @@
   }
 }
 
+@keyframes skewIn {
+  0% {
+    transform: skewY(0deg) skewX(0deg) scale(0.6);
+  }
+  100% {
+    transform: skewY(-2.5deg) skewX(0deg) scale(1);
+  }
+}
+
 @keyframes fadeInDown {
   from {
     opacity: 0;
