--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -57,11 +57,11 @@ $multiplier: 1.4;
 $multiplier-sm: 1.14;
 
 /* Border-radius */
-$br-xs: 0;
-$br-sm: 0;
-$br-md: 0;
-$br-lg: 0;
-$br-xl: 0;
+$br-xs: 0.2rem;
+$br-sm: 0.4rem;
+$br-md: 0.8rem;
+$br-lg: 1.6rem;
+$br-xl: 3.2rem;
 
 /* Spacing */
 $spacing-xxs: 0.25rem;
