--- a/assets/main.scss
+++ b/assets/main.scss
@@ -127,6 +127,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 0;
   padding:0.5rem 0;
+  line-height: 90%;
 
   @media screen and (max-width: 1200px) {
     font-size: $font-size-max;
@@ -313,13 +314,8 @@ ol {
 hr {
   margin: $spacing-lg auto;
   width:100%;
-  opacity: 0.1;
-  border:1px dashed rgba(0,0,0,0.26);
+  border:1px solid rgba($blue,0.26);
 }
-
-    .dark hr {
-      border:1px dashed rgba(255,255,255,0.26);
-    }
 
 p > strong {
   font-weight: 500;  
@@ -358,6 +354,7 @@ p > strong {
   width: 100%;
   margin: $spacing-lg auto;
   padding: 0 $spacing-md;
+  max-width: 1280px;
 
   @media screen and (max-width: 1000px) {
     max-width: 100vw;
