Just have to do something

--- a/assets/animation.scss
+++ b/assets/animation.scss
@@ -50,7 +50,7 @@
     text-shadow: 0 0 0 rgba($white, 0);
   }
   100% {
-    text-shadow: 2px 3px 0 rgba(lighten($blue, 20%), .6), 13px 20px 20px rgba($teal, .36), 13px 16px 0 rgba(darken($blue, 5%), .6), 13px 20px 20px rgba(black, .26);
+    text-shadow: 2px 3px 0 rgba(lighten($red, 20%), .6), 13px 20px 20px rgba($red, .06), 8px 12px 0 rgba(darken($red, 5%), .26), 13px 20px 20px rgba(black, .26);
   }
 }
 
