--- a/assets/animation.scss
+++ b/assets/animation.scss
@@ -59,7 +59,7 @@
     text-shadow: 0 0 0 rgba($white, 0);
   }
   100% {
-    text-shadow: 2px 4px 0 rgba(darken($blue, 5%), .6), 1px 2px 0 rgba(darken($mint, 10%), .1), 2px 10px 10px rgba(black, .6);
+    text-shadow: 2px 4px 0 rgba(darken($red, 5%), .6), 1px 2px 0 rgba(darken($red, 10%), .1), 2px 10px 10px rgba(black, .26);
   }
 }
 
