--- a/assets/products.scss
+++ b/assets/products.scss
@@ -210,6 +210,7 @@ $telos-color: #4526C3;
   flex-direction: column;
   align-items: flex-start;
   gap: $spacing-xs;
+  color: $white;
   
   span {
     font-size: $font-size-lg;
