--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,10 +39,10 @@ body.dark {
 
 button,
 .button {
-    color: $red;
+    color: $blue;
     background: transparent;
     border-radius: 0;
-    border: 2px solid rgba($red, 1);
+    border: 2px solid rgba($blue, 1);
     text-align: center;
     text-decoration: none;
     padding: $spacing-xs $spacing-md $spacing-xs;
@@ -66,7 +66,7 @@ button,
       left: 0;
       right: 0;
       bottom: 0;
-      background: rgba($red, 1);
+      background: rgba($blue, 1);
       z-index: 0;
       transition: all 0.2s ease;
       mix-blend-mode: color;
@@ -74,7 +74,7 @@ button,
 
     &:hover {
       color: $white;
-      border: 2px solid $red;
+      border: 2px solid $blue;
 
       &:after {
         top: 0;
@@ -580,6 +580,11 @@ img.in-article {
   width: 100%;
   height: auto;
   margin:2rem 0;
+}
+
+.centered {
+  display: block;
+  margin: 0 auto;
 }
 
 /* Dual panel content */
