--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,10 +39,10 @@ body.dark {
 
 button,
 .button {
-    color: $blue;
+    color: $black;
     background: transparent;
     border-radius: 0;
-    border: 2px solid rgba($blue, 1);
+    border: 2px solid rgba($black, 1);
     text-align: center;
     text-decoration: none;
     padding: $spacing-xs $spacing-md $spacing-xs;
@@ -66,7 +66,7 @@ button,
       left: 0;
       right: 0;
       bottom: 0;
-      background: rgba($blue, 1);
+      background: rgba($black, 1);
       z-index: 0;
       transition: all 0.2s ease;
       mix-blend-mode: color;
@@ -74,7 +74,7 @@ button,
 
     &:hover {
       color: $white;
-      border: 2px solid $blue;
+      border: 2px solid $black;
 
       &:after {
         top: 0;
