Standard vewrite buttons

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -39,6 +39,7 @@ $teal: #82A0CE;
 $teal-dark: #507ABA;
 $teal-light: #A7BDDD;
 
+$border: 1px solid rgba($black, 0.1);
 
 /* Fonts */
 $font-family-main: 'Host Grotesk', sans-serif;
@@ -64,6 +65,7 @@ $br-lg: 1.6rem;
 $br-xl: 3.2rem;
 
 /* Spacing */
+$spacing-xxxs: 0.125rem;
 $spacing-xxs: 0.25rem;
 $spacing-xs: 0.5rem;
 $spacing-sm: 1rem;
@@ -83,5 +85,10 @@ $width-md: 50rem;
 $width-lg: 70rem;
 $width-xl: 90rem;
 
+
 /* Shadows */
-$main-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05), 0px 24px 24px rgba(0, 0, 0, 0.06);
+// $main-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05), 0px 24px 24px rgba(0, 0, 0, 0.06);
+$main-shadow: 0px 3px 5px rgba($black, 0.05), 0px 2px 2px rgba(0, 0, 0, 0.05), 0px 4px 4px rgba($black, 0.02);
+$big-shadow: 0px 4px 4px rgba($black, 0.05), 0px 4px 8px rgba(0, 0, 0, 0.15), 0px 10px 10px rgba($black, 0.02);
+$soft-shadow: 0px 1px 1px rgba($black, 0.15), 0px 8px 8px rgba($black, 0.1);
+$small-shadow: rgba($black, 0.04) 0px 1px 6px 0px, rgba($black, 0.12) 0px -2px 4px 0px inset, rgba($black, 0.14) 0px -1px 2px 0px inset;
