--- a/assets/products.scss
+++ b/assets/products.scss
@@ -9,10 +9,10 @@ $telos-color: #4526C3;
 
 .product-splash {
   width: 100%;
-  min-height: calc(65vh - 92px);
+  min-height: calc(85dvh - 92px);
   display: flex;
   flex-direction: row;
-  margin-bottom: $spacing-xl;
+  margin-bottom: $spacing-lg;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -33,8 +33,6 @@ $telos-color: #4526C3;
       left: 0;
       width: 100%;
       height: 100%;
-      box-shadow: inset 200px 100px 400px 0px rgba($black, 0.6);
-      animation: animatedFocusShadow 30s infinite;
       z-index: 1; 
       pointer-events: none;
     }
@@ -206,10 +204,6 @@ $telos-color: #4526C3;
 }
 
 .role {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: $spacing-xs;
   color: $white;
   
   span {
