Fully round buttons

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,7 +41,7 @@ button,
 .button {
     color: $black;
     background: rgba($white, .35);
-    border-radius: $br-md;
+    border-radius: 4rem;
     border: $border;
     text-align: center;
     text-decoration: none;
