--- a/assets/main.scss
+++ b/assets/main.scss
@@ -47,7 +47,7 @@ button,
     text-decoration: none;
     padding: $spacing-xs $spacing-sm;
     cursor: pointer;
-    font-size: $font-size-xs;
+    font-size: $font-size-sm;
     font-weight: 500;
     transition: all 0.2s ease;
     font-family: $font-family-main;
