--- a/assets/main.scss
+++ b/assets/main.scss
@@ -791,7 +791,10 @@ img.in-article {
     }
 
 .single-product-image {
-    margin:0 0 2rem 0;
+    margin: $spacing-lg 0;
+    outline: 1px solid rgba(0,0,0,0.06);
+    outline-offset: -1px;
+    border-radius: $br-sm;
     width: 100%;
 }
 
@@ -803,8 +806,17 @@ img.in-article {
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap:2rem;
-  padding:1rem 0
+  padding:1rem 0;
+  margin: 0 auto;
 }
+
+    .product-images.three-across {
+      grid-template-columns: 1fr 1fr 1fr;
+
+      @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+      }
+    }
 
     .product-images.five-across {
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
