Migrated services into about

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -4,7 +4,7 @@ $black-dark: #080819;
 $black-light: #1f1c29;
 
 $white: #ffffff;
-$white-dark: #f1f0fb;
+$white-dark: #f8f8fc;
 $white-light: #f6f6fb;
 
 $blue: #6A7CBE;
