--- a/assets/main.scss
+++ b/assets/main.scss
@@ -479,6 +479,7 @@ input {
   outline: 1px solid rgba(0,0,0,0.1);
   outline-offset: -1px;
   border-radius: $br-lg;
+  max-width: 100%;
 }
 
 .article-extras {
