--- a/assets/main.scss
+++ b/assets/main.scss
@@ -108,7 +108,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 0;
   padding:0.5rem 0;
-  line-height: 90%;
+  line-height: 120%;
 
   @media screen and (max-width: 1200px) {
     font-size: $font-size-max;
@@ -147,9 +147,10 @@ h2 {
 }
 
 h3 { 
-  font-size: $font-size-xl; 
+  font-size: $font-size-lg; 
   line-height: 140%; 
-  margin-bottom:1rem;
+  margin-top: $spacing-md;
+  margin-bottom: $spacing-sm;
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-lg;
