--- a/assets/main.scss
+++ b/assets/main.scss
@@ -142,7 +142,7 @@ h2 {
 }
 
 h3 { 
-  font-size: $font-size-lg; 
+  font-size: $font-size-lg * 1.1; 
   line-height: 140%; 
   margin-top: $spacing-md;
   margin-bottom: $spacing-sm;
@@ -158,7 +158,7 @@ h3 {
 }
 
 h4 { 
-  font-size: $font-size-lg; 
+  font-size: $font-size-md * 1.1; 
   line-height: 140%;  
   margin: $spacing-md 0 $spacing-sm;
 
