--- a/assets/products.scss
+++ b/assets/products.scss
@@ -11,15 +11,9 @@ $vewrite-color: #0D1E38;
 
 .product-splash {
   width: 100%;
-  min-height: calc(85dvh - 92px);
+  min-height: 300px;
   display: flex;
   flex-direction: row;
-  margin-bottom: $spacing-lg;
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-    min-height: calc(100vh - 92px);
-  }
 
   .product-teasers {
     width: 50%;
@@ -37,12 +31,6 @@ $vewrite-color: #0D1E38;
       height: 100%;
       z-index: 1; 
       pointer-events: none;
-    }
-
-    @media (max-width: 768px) {
-      flex-direction: column;
-      width: 100%;
-      height: calc(100vh - 92px);
     }
 
     .product-teaser {
@@ -184,11 +172,8 @@ $vewrite-color: #0D1E38;
   }
 
   .product-intro {
-    width: 50%;
+    width: 100%;
     height: 100%;
-    animation: clipReveal 0.44s forwards;
-    animation-delay: 0.1s;
-    opacity: 0;
 
     @media (max-width: 768px) {
       width: 100%;
@@ -202,11 +187,6 @@ $vewrite-color: #0D1E38;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-
-      @media (max-width: 768px) {
-        width: 100%;
-        height: calc(100vh - 92px);
-      }
 
       &.vewrite {
         background-color: $vewrite-color;
